fix backface visibility :v:

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ h3 {
     position: absolute;
     width: 100%;
     height: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     padding: 30px;
     border-radius: 20px;
